--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "amazon.js",
   "scripts": {
     "lint": "eslint .",
-    "start": "nodemon app.js",
+    "start": "nodemon amazon.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
